--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
-		"@tailwindcss/forms": "^0.5.9"
+		"@tailwindcss/forms": "^0.5.9",
+		"flowbite": "^2.5.2",
+		"flowbite-svelte": "^0.47.4",
+		"flowbite-svelte-icons": "^2.0.2",
+		"svelte-sonner": "^0.3.28"
 	}
 }
