--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "bright-universe",
 	"private": true,
 	"version": "0.0.1",
+	"engines": {
+		"node": "20.x"
+	},
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -32,7 +35,6 @@
 		"flowbite": "^2.5.2",
 		"flowbite-svelte": "^0.47.4",
 		"flowbite-svelte-icons": "^2.0.2",
-		"nodemailer": "^6.9.16",
 		"svelte-sonner": "^0.3.28"
 	}
 }
