--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"flowbite": "^2.5.2",
 		"flowbite-svelte": "^0.47.4",
 		"flowbite-svelte-icons": "^2.0.2",
+		"nodemailer": "^6.9.16",
 		"svelte-sonner": "^0.3.28"
 	}
 }
